--- a/TechiesMoneyExchange/Views/ExchangePage.xaml
+++ b/TechiesMoneyExchange/Views/ExchangePage.xaml
@@ -1,8 +1,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TechiesMoneyExchange.Views.ExchangePage"
+             xmlns:conv="clr-namespace:TechiesMoneyExchange.Core.Converter;assembly=TechiesMoneyExchange.Core"
+             x:Class="TechiesMoneyExchange.Views.ExchangePage"             
              BackgroundColor="{DynamicResource SecondaryColor}">
 
+    <ContentPage.Resources>
+        <conv:StringFormatConverter x:Key="WebuyConverter" 
+                                    Format="We buy {0}"/>
+        <conv:StringFormatConverter x:Key="WesellConverter" 
+                                    Format="We sell {0}"/>
+    </ContentPage.Resources>
+    
     <ScrollView>
         <Grid RowSpacing="25" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto"
               Padding="{OnPlatform iOS='30,60,30,30', Default='30'}">
@@ -11,41 +19,54 @@
             </Label>
 
             <Grid GridLayout.Row="1" ColumnDefinitions="*,*" RowDefinitions="Auto,Auto">
-                <Label Text="We buy USD" GridLayout.Row="0" HorizontalTextAlignment="Center"/>
-                <Label Text="S/. 3.8520" FontAttributes="Bold"
-                       GridLayout.Row="1" HorizontalTextAlignment="Center"/>
+                <Label Text="{Binding MainCurrency.Name,Converter={StaticResource WebuyConverter}}" 
+                       GridLayout.Row="0" HorizontalTextAlignment="Center"/>
+                <HorizontalStackLayout GridLayout.Row="1" Spacing="5" HorizontalOptions="Center">
+                    <Label Text="{Binding BaseCurrency.Symbol}" FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"/>
+                    <Label Text="{Binding BuyingRate}" FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"/>
+                </HorizontalStackLayout>
 
-                <Label Text="We sell USD" GridLayout.Column="1" HorizontalTextAlignment="Center"/>
-                <Label Text="S/. 3.8800" FontAttributes="Bold"
-                       GridLayout.Column="1" GridLayout.Row="1" HorizontalTextAlignment="Center"/>
+                <Label Text="{Binding MainCurrency.Name,Converter={StaticResource WesellConverter}}" GridLayout.Column="1" HorizontalTextAlignment="Center"/>
+                <HorizontalStackLayout GridLayout.Column="1" GridLayout.Row="1" Spacing="5"
+                                       HorizontalOptions="Center">
+                    <Label Text="{Binding BaseCurrency.Symbol}" FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"/>
+                    <Label Text="{Binding SellingRate}" FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"/>
+                </HorizontalStackLayout>
             </Grid>
 
             <Frame GridLayout.Row="2" CornerRadius="20">
                 <Grid ColumnDefinitions="Auto,*" HeightRequest="50" ColumnSpacing="25" HorizontalOptions="Fill">
-                    <Label Text="S/." FontSize="40" VerticalOptions="Center"/>
-                    <Entry Grid.Row="2" Text="200" Keyboard="Numeric" GridLayout.Column="1" FontSize="16"
-                           VerticalOptions="Center" WidthRequest="200"/>
+                    <Label Text="{Binding SendingCurrency.Symbol}" FontSize="40" VerticalOptions="Center"/>
+                    <Entry Grid.Row="2" Text="{Binding AmountYouPay}" Keyboard="Numeric" GridLayout.Column="1" FontSize="16"
+                           VerticalOptions="Center" WidthRequest="200"
+                           TextColor="Black"/>
                 </Grid>
             </Frame>
             <Frame GridLayout.Row="3" CornerRadius="20">
                 <Grid ColumnDefinitions="Auto,*" HeightRequest="50" ColumnSpacing="25"  HorizontalOptions="Fill">
-                    <Label Text="$" FontSize="40" VerticalOptions="Center"/>
-                    <Entry Grid.Row="2" Text="51.55" Keyboard="Numeric" GridLayout.Column="1"
-                           FontSize="16"  WidthRequest="200"
+                    <Label Text="{Binding RecievingCurrency.Symbol}" FontSize="40" VerticalOptions="Center"/>
+                    <Entry Grid.Row="2" Text="{Binding AmountYouRecieve}" Keyboard="Numeric" GridLayout.Column="1"
+                           FontSize="16"  WidthRequest="200" TextColor="Black"
                            VerticalOptions="Center" HorizontalOptions="FillAndExpand"/>
                 </Grid>
             </Frame>
             <Button HorizontalOptions="Start" GridLayout.Row="3" VerticalOptions="Start" Margin="60,0,0,0" TranslationY="-35"
-                    ImageSource="sync02.png" HeightRequest="50" WidthRequest="50" CornerRadius="35"/>
+                    ImageSource="sync02.png" HeightRequest="50" WidthRequest="50" CornerRadius="35"
+                    Command="{Binding SwitchCommand}"/>
             
 
             <Grid GridLayout.Row="4" ColumnDefinitions="*,Auto">
-                <Entry Placeholder="Have a coupon? Enter it here" HorizontalOptions="FillAndExpand"/>
+                <Entry Placeholder="Have a coupon? Enter it here" HorizontalOptions="FillAndExpand"
+                       PlaceholderColor="Gray" Background="#ededed"/>
                 <Button Text="Apply" GridLayout.Column="1"/>
             </Grid>
 
             <Button GridLayout.Row="5" Text="Start the operation"
-                    ImageSource="start.png" Clicked="Start_Clicked"/>
+                    ImageSource="start.png" Command="{Binding StartCommand}"/>
 
         </Grid>
     </ScrollView>
