--- a/TechiesMoneyExchange/Views/RegisterOperationPage.xaml
+++ b/TechiesMoneyExchange/Views/RegisterOperationPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TechiesMoneyExchange.RegisterOperationPage"
+             x:Class="TechiesMoneyExchange.Views.RegisterOperationPage"
              Title="Register your operation"
              xmlns:ct="clr-namespace:Xamarin.CommunityToolkit.Effects.Semantic;assembly=Xamarin.CommunityToolkit.MauiCompat"
              BackgroundColor="White" Appearing="Page_Appearing">
