--- a/TechiesMoneyExchange/App.xaml
+++ b/TechiesMoneyExchange/App.xaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:windows="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.WindowsSpecific;assembly=Microsoft.Maui.Controls"
              xmlns:local="clr-namespace:TechiesMoneyExchange"
+             xmlns:conv="clr-namespace:TechiesMoneyExchange.Core.Converter;assembly=TechiesMoneyExchange.Core"
              x:Class="TechiesMoneyExchange.App"
              windows:Application.ImageDirectory="Assets">
     <Application.Resources>
@@ -21,6 +22,8 @@
                 <Setter Property="BackgroundColor" Value="{DynamicResource PrimaryColor}" />
                 <Setter Property="Padding" Value="14,10" />
             </Style>
+
+            <conv:NegatedConverter x:Key="NegatedConverter"/>
 
         </ResourceDictionary>
     </Application.Resources>
